# Python-FastAPI-template

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  COMMIT_GENERATION_README.md  Dockerfile  Dockerfile.prod  alembic.ini  docker-compose.yml  justfile  logging.ini  logging_production.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: README.md  deploy.yml
alembic/: env.py
src/: celery.py  config.py  constants.py  database.py  dependencies.py  exceptions.py  main.py
src/auth/: AuthBackend.py  AuthRepository.py  AuthRouter.py  AuthService.py
src/notifications/: NotificationModel.py  NotificationRepository.py  NotificationRouter.py  NotificationSchemas.py  NotificationService.py  WebNotifier.py
src/organizations/: OrganizationModel.py  OrganizationRepository.py  OrganizationRouter.py  OrganizationSchemas.py  OrganizationService.py
src/settings/: SettingsRouter.py  SettingsSchemas.py
src/users/: UserModel.py  UserRepository.py  UserRouter.py  UserSchemas.py  UserService.py
src/utils/: decorators.py
src/utils/abstractions/: notifier.py
src/utils/base/: BaseCrudModel.py  BaseCrudRouter.py  BaseRepository.py  BaseSchemasForRouter.py  BaseService.py  UTCFieldsMixin.py
src/utils/decorators/: translation_decorator.py
src/utils/managers/: __init__.py  language_manager.py  time_manager.py  translations.py
src/utils/managers/RabbitMQ/: connection.py  publisher.py
src/utils/managers/S3/: FileManager.py  connection.py
src/utils/managers/SMTP/: SMTPSchemas.py  __init__.py
src/utils/middleware/: localization_middleware.py
src/websocket/: WebsocketRepository.py  WebsocketRouter.py  WebsocketService.py
tests/: conftest.py
tests/base/: test_base.py
tests/e2e/: test_dummy.py
tests/integration/: test_dummy.py
tests/unit/: test_dummy.py
(+14 files in other folders)
