[tool.poetry]
name = "fastapi template"
version = "0.1.0"
description = ""
authors = ["Fedor S. <fedor.shtab@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.23.4"
pandas = "^2.0.0"
sqlalchemy = "^2.0.15"
fastapi = {extras = ["all"], version = "^0.100.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
python-dotenv= '*'
uvicorn = {extras = ["standard"], version = "^0.22.0"}
alembic= '*'
asyncpg= '*'
fastapi-users = {extras = ["all"], version = '*'}
fastapi-users-db-sqlalchemy = "^6.0.0"
pytz = "^2023.3"
gunicorn = "^21.2.0"
kafka-python = "^2.0.2"
celery = "^5.3.6"
flower = "^2.0.1"
aiofiles = "^23.2.1"
pytest = "^8.2.0"
redis = ">=4.2.0rc1,<5.0.0"
requests = "^2.31.0"
influxdb-client = "^1.39.0"
cryptography = "^42.0.5"
influxdb = "^5.3.2"
apscheduler = "^3.10.4"
openpyxl = "^3.1.5"
testcontainers-python-influxdb = {extras = ["influxdb2"], version = "^0.2.2"}
sentry-sdk = "^2.14.0"
pydantic = "^2.7.0"
psycopg2-binary = "^2.9.9"
pydantic-settings = "^2.5.2"
ruff = "^0.6.9"
pre-commit = "^4.0.1"
xlsxwriter = "^3.2.0"
pillow = "^11.0.0"
pytest-asyncio = "^0.24.0"
httpx = "^0.27.2"
pika = "^1.3.2"
aiohttp = "^3.11.10"
aio-pika = "^9.5.4"
fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
psycopg2 = "^2.9.10"
uuid7 = "^0.1.0"
aiobotocore = "2.16.1"
pylint = "^3.3.5"
rust-just = "^1.40.0"
python-logging-loki = "^0.3.1"
types-redis = "^4.6.0.20241004"
loguru = "^0.7.3"
colorama = "^0.4.6"
python-dateutil = "^2.9.0.post0"
scipy = "^1.16.2"
numba = "^0.62.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
